test: Initial CLI tests
- Adds tests for the `--help` of each command
- Adds tests for the output of `list_components`
- Adds options to control logging / error reporting to stabilize output

--- a/crates/stepflow-main/Cargo.toml
+++ b/crates/stepflow-main/Cargo.toml
@@ -30,6 +30,8 @@ tracing-subscriber.workspace = true
 url.workspace = true
 
 [dev-dependencies]
+insta-cmd.workspace = true
+tempfile.workspace = true
 
 [[bin]]
 name = "stepflow"
