--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,7 @@ futures = "0.3.31"
 hex = "0.4"
 indexmap = { version = "2.8.0", features = ["serde"] }
 insta = { version = "1.34.0", features = ["glob", "yaml" ] }
+insta-cmd = "0.6.0"
 openai-api-rs = "6.0.6"
 regex = "1.11.1"
 walkdir = "2.5.0"
