feat: Introduce workflow execution loop
This changes the workflow execution to using a loop that submits
the runnable steps for execution, and adds new steps as those
complete. This structure is more amenable to journalling and
restarts, as well as debugging / single-stepping and other
execution patterns compared to the relatively rigid "create the
topology and run it".

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ resolver = "2"
 members = ["crates/*"]
 
 [workspace.dependencies]
+bit-set = "0.8.0"
 clap = { version = "4.5.35", features = ["derive", "env"] }
 dynosaur = "0.2.0"
 erased-serde = "0.4.6"
