--- a/crates/stepflow-state/Cargo.toml
+++ b/crates/stepflow-state/Cargo.toml
@@ -13,6 +13,7 @@ serde_json.workspace = true
 stepflow-core.workspace = true
 thiserror.workspace = true
 tokio.workspace = true
+uuid.workspace = true
 
 [lints]
 workspace = true
