feat: Add basic REPL with run/rerun commands
- Use rustyline for repl and clap for command parsing
- Share arg structs between cli and repl
- Add placeholders for debugging
- Add tests for repl and CLI

--- a/crates/stepflow-main/Cargo.toml
+++ b/crates/stepflow-main/Cargo.toml
@@ -10,6 +10,7 @@ description = "Stepflow CLI."
 [dependencies]
 clap.workspace = true
 error-stack.workspace = true
+rustyline.workspace = true
 serde.workspace = true
 serde_json.workspace = true
 serde_yaml_ng.workspace = true
