--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,7 +21,7 @@ insta = { version = "1.34.0", features = ["glob", "yaml" ] }
 insta-cmd = "0.6.0"
 openai-api-rs = "6.0.6"
 regex = "1.11.1"
-walkdir = "2.5.0"
+rustyline = "14.0"
 safer_owning_ref = "0.5.0"
 schemars = { version = "0.8.22", features = ["indexmap2", "impl_json_schema", "url"] }
 serde = { version = "1.0.219", features = ["derive", "rc"] }
@@ -50,6 +50,7 @@ tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt", "jso
 trait-variant = "0.1.2"
 url = { version = "2.5.4", features = ["serde"]}
 uuid = { version = "1.16.0", features = ["v4", "serde"]}
+walkdir = "2.5.0"
 which = { version = "7.0.3", features = ["tracing"] }
 
 # Enable max optimizations for dependencies, but not for our code
