--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,6 +30,7 @@ serde_yaml_ng = "0.10.0"
 sha2 = "0.10"
 similar = "2.7.0"
 similar-asserts = { version = "1.7.0", features = ["serde" ] }
+sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "uuid", "sqlite"] }
 static_assertions = "1.1.0"
 stepflow-builtins = { path = "./crates/stepflow-builtins" }
 stepflow-components-mcp = { path = "./crates/stepflow-components-mcp" }
@@ -39,6 +40,7 @@ stepflow-mock = { path = "./crates/stepflow-mock" }
 stepflow-plugin = { path = "./crates/stepflow-plugin" }
 stepflow-protocol = { path = "./crates/stepflow-protocol" }
 stepflow-state = { path = "./crates/stepflow-state" }
+stepflow-state-sql = { path = "./crates/stepflow-state-sql" }
 tempfile = "3.8"
 test-with = { version = "0.14.10", features = ["runtime"] }
 thiserror = "2.0.12"
