--- a/crates/stepflow-components-mcp/Cargo.toml
+++ b/crates/stepflow-components-mcp/Cargo.toml
@@ -7,6 +7,9 @@ license.workspace = true
 publish = false
 description = "Step execution plugins for executing MCP tools."
 
+[lib]
+doctest = false
+
 [dependencies]
 
 [lints]
