--- a/crates/stepflow-execution/Cargo.toml
+++ b/crates/stepflow-execution/Cargo.toml
@@ -7,6 +7,9 @@ license.workspace = true
 publish = false
 description = "Execution logic for workflows."
 
+[lib]
+doctest = false
+
 [dependencies]
 bit-set.workspace = true
 error-stack.workspace = true
