--- a/crates/stepflow-mock/Cargo.toml
+++ b/crates/stepflow-mock/Cargo.toml
@@ -7,6 +7,9 @@ license.workspace = true
 publish = false
 description = "Mock component plugin for testing purposes."
 
+[lib]
+doctest = false
+
 [dependencies]
 error-stack.workspace = true
 serde.workspace = true
