--- a/crates/stepflow-state/Cargo.toml
+++ b/crates/stepflow-state/Cargo.toml
@@ -7,6 +7,9 @@ license.workspace = true
 publish = false
 description = "State management for workflow execution"
 
+[lib]
+doctest = false
+
 [dependencies]
 error-stack.workspace = true
 serde_json.workspace = true
