feat: Add StepFlow HTTP server with workflow management
- Implement HTTP server using Poem framework with OpenAPI documentation
- Add comprehensive API endpoints for workflow execution and management
- Integrate with existing StepFlow execution engine and state management

- Endpoint management with Docker-like label semantics and operations
- Ad-hoc workflow execution with real-time status tracking
- Comprehensive execution history and detailed step-by-step breakdown
- Workflow submission and monitoring capabilities

- Extend StateStore trait with workflow management capabilities
- Implement SQL StateStore workflow management features
- Add comprehensive execution tracking and persistence

- `/endpoints` - Endpoint management with filtering and label operations
- `/executions` - Execution history with comprehensive filtering
- `/execute` - Ad-hoc workflow execution
- `/components` - Component information and schemas
- Debug endpoints for comprehensive workflow analysis

--- a/crates/stepflow-execution/Cargo.toml
+++ b/crates/stepflow-execution/Cargo.toml
@@ -14,6 +14,8 @@ doctest = false
 bit-set.workspace = true
 error-stack.workspace = true
 futures.workspace = true
+schemars.workspace = true
+serde.workspace = true
 serde_json.workspace = true
 stepflow-plugin.workspace = true
 stepflow-core.workspace = true
