--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,17 +10,22 @@ members = ["crates/*"]
 
 [workspace.dependencies]
 bit-set = "0.8.0"
+chrono = { version = "0.4", features = ["serde"] }
 clap = { version = "4.5.35", features = ["derive", "env"] }
 dynosaur = "0.2.0"
 erased-serde = "0.4.6"
 error-stack = { version = "0.5.0", features = ["serde"] }
 futures = "0.3.31"
+glob = "0.3"
 hex = "0.4"
 indexmap = { version = "2.8.0", features = ["serde"] }
 insta = { version = "1.34.0", features = ["glob", "yaml" ] }
 insta-cmd = "0.6.0"
 openai-api-rs = "6.0.6"
+poem = "3.1"
+poem-openapi = "5.1"
 regex = "1.11.1"
+reqwest = { version = "0.12", features = ["json"] }
 rustyline = "14.0"
 safer_owning_ref = "0.5.0"
 schemars = { version = "0.8.22", features = ["indexmap2", "impl_json_schema", "url"] }
