--- a/crates/stepflow-state-sql/Cargo.toml
+++ b/crates/stepflow-state-sql/Cargo.toml
@@ -8,9 +8,11 @@ description = "SQL-based StateStore implementation for StepFlow"
 doctest = false
 
 [dependencies]
+chrono.workspace = true
 error-stack.workspace = true
 serde.workspace = true
 serde_json.workspace = true
+sha2.workspace = true
 sqlx.workspace = true
 stepflow-core.workspace = true
 stepflow-state.workspace = true
