--- a/crates/stepflow-state/Cargo.toml
+++ b/crates/stepflow-state/Cargo.toml
@@ -11,8 +11,12 @@ description = "State management for workflow execution"
 doctest = false
 
 [dependencies]
+chrono.workspace = true
 error-stack.workspace = true
+schemars.workspace = true
+serde.workspace = true
 serde_json.workspace = true
+sha2.workspace = true
 stepflow-core.workspace = true
 thiserror.workspace = true
 tokio.workspace = true
