feat: Update the API
- Convert APIs from poem-openapi to utoipa + axum to fix OpenAPI
  and schema issues.
- Move server to stepflow-server crate
- Add server tests to the separate files
- Add integration tests for server
- Use proper DateTime types instead of strings in API responses
- Remove unused api.rs file and clean up imports
- Unify status types to reduce duplication
- Unify step endpoints for execution and debug
- Add port/edge information to workflow API
- Collapse migrations
- Combine debug session and workflow executor.
- Use workflow executor as truth for workflow state.\
- Simplify stepflow-main serve command to just launch stepflow-server
- Add FlowHash type for proper workflow identification
- Update workflow executor to track workflow hashes

--- a/crates/stepflow-builtins/Cargo.toml
+++ b/crates/stepflow-builtins/Cargo.toml
@@ -1,11 +1,16 @@
 [package]
 name = "stepflow-builtins"
+description = "Stepflow component plugin providing built-in components."
 version.workspace = true
 authors.workspace = true
 edition.workspace = true
 license.workspace = true
+homepage.workspace = true
+repository.workspace = true
 publish = false
-description = "Stepflow component plugin providing built-in components."
+
+[lints]
+workspace = true
 
 [lib]
 doctest = false
@@ -30,6 +35,3 @@ uuid.workspace = true
 [dev-dependencies]
 test-with.workspace = true
 tempfile.workspace = true
-
-[lints]
-workspace = true
