--- a/crates/stepflow-state-sql/Cargo.toml
+++ b/crates/stepflow-state-sql/Cargo.toml
@@ -1,11 +1,16 @@
 [package]
 name = "stepflow-state-sql"
+description = "SQL-based StateStore implementation for StepFlow"
 version.workspace = true
 authors.workspace = true
 edition.workspace = true
 license.workspace = true
+homepage.workspace = true
+repository.workspace = true
 publish = false
-description = "SQL-based StateStore implementation for StepFlow"
+
+[lints]
+workspace = true
 
 [lib]
 doctest = false
@@ -13,6 +18,7 @@ doctest = false
 [dependencies]
 chrono.workspace = true
 error-stack.workspace = true
+futures.workspace = true
 serde.workspace = true
 serde_json.workspace = true
 sha2.workspace = true
@@ -20,6 +26,7 @@ sqlx.workspace = true
 stepflow-core.workspace = true
 stepflow-state.workspace = true
 tokio.workspace = true
+tracing.workspace = true
 uuid.workspace = true
 
 [dev-dependencies]
