--- a/crates/stepflow-state/Cargo.toml
+++ b/crates/stepflow-state/Cargo.toml
@@ -1,11 +1,16 @@
 [package]
 name = "stepflow-state"
+description = "State management for workflow execution"
 version.workspace = true
 authors.workspace = true
 edition.workspace = true
 license.workspace = true
+homepage.workspace = true
+repository.workspace = true
 publish = false
-description = "State management for workflow execution"
+
+[lints]
+workspace = true
 
 [lib]
 doctest = false
@@ -13,14 +18,9 @@ doctest = false
 [dependencies]
 chrono.workspace = true
 error-stack.workspace = true
-schemars.workspace = true
-serde.workspace = true
+futures.workspace = true
 serde_json.workspace = true
-sha2.workspace = true
 stepflow-core.workspace = true
 thiserror.workspace = true
 tokio.workspace = true
 uuid.workspace = true
-
-[lints]
-workspace = true
