--- a/tests/mock/conditional_skip_use_default.yaml
+++ b/tests/mock/conditional_skip_use_default.yaml
@@ -18,7 +18,7 @@ steps:
   input_schema: null
   output_schema: null
   skip_if:
-    $from: 
+    $from:
       workflow: input
     path: should_skip
   input:
@@ -68,5 +68,5 @@ test:
     output:
       outcome: failed
       error:
-        code: 0
-        message: error executing user-defined function
+        code: 500
+        message: 'Flow execution failed: step "dependent_step" failed'
