--- a/crates/stepflow-state-sql/Cargo.toml
+++ b/crates/stepflow-state-sql/Cargo.toml
@@ -20,6 +20,7 @@ sqlx.workspace = true
 stepflow-core.workspace = true
 stepflow-state.workspace = true
 tokio.workspace = true
+tracing.workspace = true
 uuid.workspace = true
 
 [dev-dependencies]
