--- a/Cargo.toml
+++ b/Cargo.toml
@@ -61,7 +61,7 @@ tracing-error = "0.2.1"
 tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt", "json", "local-time" ] }
 trait-variant = "0.1.2"
 url = { version = "2.5.4", features = ["serde"]}
-utoipa = { version = "5.3", features = ["axum_extras", "rc_schema", "url"] }
+utoipa = { version = "5.3", features = ["axum_extras", "rc_schema", "url", "uuid"] }
 utoipa-axum = "0.2"
 utoipa-swagger-ui = { version = "9.0", features = ["axum"] }
 uuid = { version = "1.16.0", features = ["v4", "serde"]}
