--- a/crates/stepflow-server/Cargo.toml
+++ b/crates/stepflow-server/Cargo.toml
@@ -18,22 +18,27 @@ workspace = true
 [dependencies]
 axum.workspace = true
 chrono.workspace = true
-serde.workspace = true
+error-stack.workspace = true
 serde_json.workspace = true
-stepflow-analysis = { workspace = true }
-stepflow-core = { workspace = true }
+serde.workspace = true
+stepflow-analysis.workspace = true
+stepflow-core.workspace = true
 stepflow-execution.workspace = true
 stepflow-plugin.workspace = true
 stepflow-state.workspace = true
+thiserror.workspace = true
 tokio.workspace = true
-tower.workspace = true
 tower-http.workspace = true
+tower.workspace = true
 tracing.workspace = true
-utoipa.workspace = true
 utoipa-axum.workspace = true
 utoipa-swagger-ui.workspace = true
+utoipa.workspace = true
 uuid.workspace = true
 
 [dev-dependencies]
+stepflow-builtins.workspace = true
+tracing-error.workspace = true
+tracing-subscriber.workspace = true
 tower.workspace = true
 url.workspace = true
